# ksr

./: CMakeLists.txt  README.md  cpp17.cmake  ksr.kdev4
.kdev4/: ksr.kdev4
include/ksr/: algorithm.hpp  flag_product.hpp  function_view.hpp  functional.hpp  lock_adaptor.hpp  math.hpp  meta.hpp  meta_tag.hpp  meta_tag.in.hpp  meta_tag_impl.in.hpp  meta_type_traits.hpp  proxy_iterator.hpp  range.hpp  transform_iterator.hpp  type_traits.hpp  type_util.hpp  update_filter.hpp
include/ksr/algorithm/: proxy_sort.hpp  transform_to.hpp
include/ksr/std/: array.hpp
include/ksr/stdx/: array.hpp  variant.hpp
test/: CMakeLists.txt  test_algorithm.cpp  test_flag_product.cpp  test_functional.cpp  test_lock_adaptor.cpp  test_meta_seq.cpp  test_narrow_cast.cpp  test_proxy_iterator.cpp  test_transform_iterator.cpp  test_transform_to.cpp  test_update_filter.cpp
